--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "intervention/image": "^2.5.1",
         "laravel/framework": "^8.0",
         "laravel/helpers": "^v1.3.0",
-        "laravel/socialite": "^v5.0.1",
+        "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^v6.2.0",
         "maatwebsite/excel": "^3.1",
