--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "laravel/tinker": "^2.0",
         "laravelcollective/html": "^v6.2.0",
         "maatwebsite/excel": "^3.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-activitylog": "^3.11",
         "spatie/laravel-analytics": "^3.10.1",
         "yajra/laravel-datatables-oracle": "^v9.11.0"
